<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_dss"
            android:icon="@drawable/ic_access_alarms_black_24dp"
            android:title="@string/menu_spk" />
        <item
            android:id="@+id/nav_manager"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="Assign Manager" />
        <item
            android:id="@+id/nav_pengajuan"
            android:icon="@drawable/ic_baseline_assignment_ind_24"
            android:title="Pengajuan Workshop" />
    </group>
</menu>
