<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke"
    android:layout_margin="25dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <ImageView
            android:id="@+id/fotoProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_username_01"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>
        
        <TextView
            android:id="@+id/namaProfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24sp"
            android:layout_marginBottom="30dp"/>
        
        <TextView
            android:id="@+id/jabatanProfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jabatan"
            android:textSize="24sp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/pegawaiProfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pegawai"
            android:textSize="24sp"
            android:layout_marginBottom="40dp"/>

        <Button
            android:id="@+id/ubahProfil"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/ubah"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp"/>
    </LinearLayout>

</RelativeLayout>