<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edtNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/name"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtJabatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/jabatan"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtNIK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/pegawai"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_edit"
            android:background="@drawable/bg_button"
            android:text="Ubah"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>